--- a/src/stories/Layout/Layout.css
+++ b/src/stories/Layout/Layout.css
@@ -1,5 +1,12 @@
 .layout {
+    margin: 3em;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+    .layout{
+        margin: 1em;
+    }
 }
