--- a/src/stories/Button/Button.css
+++ b/src/stories/Button/Button.css
@@ -1,5 +1,6 @@
 .button {
     max-height: 3em;
+    margin: 3rem;
     padding: 0.75rem 2rem;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700;
@@ -7,8 +8,9 @@
     text-align: center;
     border: 0;
     border-radius: 3em;
-     display: inline-block;
+    display: inline-block;
     transition: all 0.5s ease-out;
+    cursor: pointer;
 }
 
 .button--primary {
