--- a/src/stories/Intro/Intro.css
+++ b/src/stories/Intro/Intro.css
@@ -35,7 +35,9 @@
     .intro { 
         margin-top: 5vh;
     }
+}
 
+@media  screen and (max-width: 800px) {
     .side {
         flex-direction: column;
     }
