--- a/src/stories/Button/Button.css
+++ b/src/stories/Button/Button.css
@@ -3,7 +3,7 @@
     margin: 3rem;
     padding: 0.75rem 2rem;
     font-family: 'Courier New', Courier, monospace;
-    font-weight: 700;
+    font-weight: 500;
     font-size: 16px;
     text-align: center;
     border: 0;
@@ -32,4 +32,20 @@
     background-color: hsl(147, 79%, 40%);
     color: hsl(201, 40%, 10%);
     transition: all 0.1s ease-out;
+}
+
+.button--sm {
+    max-height: 2.5em;
+    font-size: 12px;
+    font-weight: 300;
+    padding: 0.5rem 1.5rem;
+    border-radius: 2.5rem;
+}
+
+.button--lg {
+    max-height: 3.5em;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 1rem 2.5rem;
+    border-radius: 3.5rem;
 }
