--- a/src/stories/ProjectInfo/ProjectInfo.css
+++ b/src/stories/ProjectInfo/ProjectInfo.css
@@ -1,5 +1,14 @@
 .projectinfo {
-    background-color: #172B36;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+
+    width: 80%;
+    height: 80%;
+    z-index: 1;
+    transform: translate(-50%, -50%);
+
+    background-color: hsl(201, 39%, 20%);
     color: white;
 
     padding: 2rem;
@@ -7,7 +16,43 @@
     border-radius: 2rem;
 }
 
+.openInfo {
+    animation: fadeIn 0.25s ease-out;
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+}
+
+.closeInfo {
+    animation: fadeOut 0.25s ease-out;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
 .projectinfo > .border {
     padding-bottom: 0.5rem;
     border-bottom: 1px solid hsl(147, 79%, 61%);
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        display: none;
+    }
+
+    100% {
+        opacity: 100%;
+        display: block;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 100%;
+        display: block;
+    }
+
+    100% {
+        opacity: 0;
+        display: none;
+    }
 }
