--- a/src/stories/Project/Project.css
+++ b/src/stories/Project/Project.css
@@ -1,19 +1,25 @@
 .project {
     font-family: 'Inter', sans-serif;
-    
     padding: 1.5rem;
-
     background-color: hsl(201, 39%, 20%);
     color: white;
-
     display: grid;
     grid-template-rows: 4rem 1fr 3rem;
-
     max-width: 16rem;
     min-width: 12rem;
     max-height: 24rem;
-
     border-radius: 2rem;
+}
+
+.darken::before {
+    content: '';
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: hsla(0, 0%, 0%, 0.2);
+    top: 0;
+    left: 0;
+    transition: background-color 250ms ease-out;
 }
 
 .project > * {
