--- a/src/stories/ProjectInfo/ProjectInfo.css
+++ b/src/stories/ProjectInfo/ProjectInfo.css
@@ -2,24 +2,21 @@
     position: fixed;
     top: 50%;
     left: 50%;
-
     width: 80%;
     height: 80%;
+    max-width: 64rem;
     z-index: 1;
     transform: translate(-50%, -50%);
-
     background-color: hsl(201, 39%, 20%);
     color: white;
-
     padding: 2rem;
-
     border-radius: 2rem;
 }
 
 .openInfo {
     animation: fadeIn 0.25s ease-out;
     animation-iteration-count: 1;
-    animation-fill-mode: both;
+    animation-fill-mode: forwards;
 }
 
 .closeInfo {
