--- a/src/stories/Project/Project.css
+++ b/src/stories/Project/Project.css
@@ -1,12 +1,14 @@
 .project {
+    user-select: none;
     font-family: 'Inter', sans-serif;
     padding: 1.5rem;
     background-color: hsl(201, 39%, 20%);
     color: white;
     display: grid;
     grid-template-rows: 4rem 1fr 3rem;
-    max-width: 16rem;
-    min-width: 12rem;
+    max-width: 20rem;
+    min-width: 16rem;
+    min-height: 16rem;
     max-height: 24rem;
     border-radius: 2rem;
 }
@@ -16,10 +18,11 @@
     position: fixed;
     height: 100vh;
     width: 100vw;
-    background-color: hsla(0, 0%, 0%, 0.2);
+    background-color: hsla(0, 0%, 0%, 0.5);
     top: 0;
     left: 0;
     transition: background-color 250ms ease-out;
+    z-index: 1;
 }
 
 .project > * {
